@@ -1,7 +1,7 @@
 /*****************************************************************************
 ** wactablet.h
 **
-** Copyright (C) 2002,2003 - John E. Joganic
+** Copyright (C) 2002 - 2004 - John E. Joganic
 **
 ** This program is free software; you can redistribute it and/or
 ** modify it under the terms of the GNU General Public License
