@@ -227,13 +227,14 @@ struct _WacomModel
 #define STYLUS_ID               1
 #define CURSOR_ID               2
 #define ERASER_ID               4
-#define ABSOLUTE_FLAG           8
-#define KEEP_SHAPE_FLAG         16
-#define BAUD_19200_FLAG         32
-#define BETA_FLAG               64
-#define BUTTONS_ONLY_FLAG       128
-#define TPCBUTTONS_FLAG		256
-#define TPCBUTTONONE_FLAG	512
+#define PAD_ID                  8
+#define ABSOLUTE_FLAG           16
+#define KEEP_SHAPE_FLAG         32
+#define BAUD_19200_FLAG         64
+#define BETA_FLAG               128
+#define BUTTONS_ONLY_FLAG       256
+#define TPCBUTTONS_FLAG		512
+#define TPCBUTTONONE_FLAG	1024
 
 #define IsCursor(priv) (DEVICE_ID((priv)->flags) == CURSOR_ID)
 #define IsStylus(priv) (DEVICE_ID((priv)->flags) == STYLUS_ID)
